--- a/Portfolio/public/index.html
+++ b/Portfolio/public/index.html
@@ -9,6 +9,9 @@
         <link rel="icon" href="images/temp.png" />
     </head>
     <body id="about">
+        <header>
+            <h1>Shane Nguyen</h1>
+        </header>
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
@@ -17,23 +20,10 @@
             </ul>
         </nav>
         <main>
-            <h1>Shane Nguyen</h1>
+            <h1>About</h1>
             <img src="images/avatar.png" />
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis urna cursus eget nunc 
-                scelerisque. Diam sit amet nisl suscipit adipiscing. Dignissim sodales ut eu sem integer vitae justo eget. Tortor at auctor urna nunc id. Aliquam sem et 
-                tortor consequat id porta. Nulla facilisi etiam dignissim diam quis enim lobortis scelerisque. Parturient montes nascetur ridiculus mus mauris vitae ultricies 
-                leo integer. Est sit amet facilisis magna etiam tempor. Egestas purus viverra accumsan in nisl. Aliquam id diam maecenas ultricies mi eget mauris pharetra. 
-                Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Tortor dignissim convallis aenean et tortor. Proin fermentum leo vel orci porta 
-                non pulvinar neque laoreet. 
-            </p>
-            <p>
-                Ornare arcu odio ut sem nulla pharetra. Adipiscing enim eu turpis egestas pretium aenean pharetra magna. Neque sodales ut etiam 
-                sit. Non diam phasellus vestibulum lorem. Id donec ultrices tincidunt arcu non sodales. Risus feugiat in ante metus dictum at tempor commodo. Venenatis urna 
-                cursus eget nunc scelerisque viverra mauris. Congue eu consequat ac felis donec et odio pellentesque diam. Scelerisque eleifend donec pretium vulputate sapien 
-                nec sagittis aliquam malesuada. Molestie nunc non blandit massa enim. Vulputate enim nulla aliquet porttitor lacus luctus accumsan tortor. Lorem ipsum dolor 
-                sit amet consectetur. Vitae nunc sed velit dignissim sodales. Lacus suspendisse faucibus interdum posuere. Amet commodo nulla facilisi nullam vehicula ipsum 
-                a arcu. Aliquam ut porttitor leo a diam.
+                I am a second-year at Rose-Hulman Institute of Technology, pursing a degree in Computer Science with a minor in Robotics. I love creating things — all the way from video games to art. I'm very passionate about art, animation, and video game development. I also love learning new things and problem-solving. 
             </p>
         </main>
         <footer>
