--- a/Portfolio/public/portfolio.html
+++ b/Portfolio/public/portfolio.html
@@ -9,6 +9,9 @@
         <link rel="icon" href="images/favicon.png" />
     </head>
     <body id="portfolio">
+        <header>
+            <h1>Shane Nguyen</h1>
+        </header>
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
@@ -20,27 +23,24 @@
             <h1>Portfolio</h1>
             <ul id="portfolioItems">
                 <li>
-                    <h2><a href="https://youtube.com">Project Name</a></h2>
-                    <img src="images/temp.png">
+                    <h2><a>Trash Instrument</a></h2>
+                    <img src="images/trashinstrument.png">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Facilisi morbi tempus iaculis urna id volutpat lacus. Nibh cras pulvinar mattis nunc sed blandit libero volutpat sed.
+                        EM103 final project tasked me to create a xylophone made of 100% trash/found material.
                     </p>
                 </li>
                 <li>
-                    <h2><a href="https://youtube.com">Project Name</a></h2>
-                    <img src="images/temp.png">
+                    <h2><a>Joust Recreation</a></h2>
+                    <img src="images/joust.png">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Facilisi morbi tempus iaculis urna id volutpat lacus. Nibh cras pulvinar mattis nunc sed blandit libero volutpat sed.
+                        CSSE220's final project of recreating the popular retro game Joust in Java. 
                     </p>
                 </li>
                 <li>
-                    <h2><a href="https://youtube.com">Project Name</a></h2>
-                    <img src="images/temp.png">
+                    <h2><a>The Snakes Game</a></h2>
+                    <img src="images/snake.png">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Facilisi morbi tempus iaculis urna id volutpat lacus. Nibh cras pulvinar mattis nunc sed blandit libero volutpat sed.
+                        CSSE120's game creation final project. We created a multiplayer Snake game.
                     </p>
                 </li>
             </ul>
