--- a/Portfolio/public/resume.html
+++ b/Portfolio/public/resume.html
@@ -9,6 +9,9 @@
         <link rel="icon" href="images/temp.png" />
     </head>
     <body id="about">
+        <header>
+            <h1>Shane Nguyen</h1>
+        </header>
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
@@ -23,9 +26,10 @@
             <p>To obtain an internship, co-op, or job in the field of computer science, software engineering, or robotics</p>
 
             <h2>Education</h2>
-            <h3><span class="degreeName">Bachelor of Science, Computer Science, Minor in Robotics, May 2026, GPA: 3.79</span></h3>
+            <h3>Bachelor of Science, Computer Science, Minor in Robotics</h3> 
             <dl>
                 <dt><strong>Rose-Hulman Institute of Technology</strong> Terre Haute, IN</dt>
+                <dt>May 2026, GPA: 3.79</dt>
                 <dt>Relevant Courses:</dt>
                 <dd>Electrical Systems, Software Development, Object-Oriented Design, Systems Programming, Digital Systems, Proofs, Data Structures and Algorithms, Web Programming, Technical Communications, Mechatronics</dl>
             </dl>
@@ -41,7 +45,7 @@
             </dl> 
 
             <h2>Experience</h2>
-            <h3>Awesome Ninja Games <em>Executive Officer, Developer, Artist , Game Designer, Animator (2020 – Current)</em></h3>
+            <h4>Awesome Ninja Games <em>Executive Officer, Developer, Artist , Game Designer, Animator (2020 – Current)</em></h3>
             <ul>
                 <li>Founded Roblox game studio and corporation alongside three other friends</li>
                 <li>Refactored and developed backend framework that enabled visual effects to be replicated on the client using Lua</li>
@@ -49,26 +53,26 @@
                 <li>Created 3 high performing games, generating 150M+ play sessions and 71K+ daily active users, and roughly $1M in a month using Discord subscriptions</li>
                 <li><a href="http://www.awsninjagames.com/">awsninjagames.com</a></li>
             </ul>
-            <h3>ThornBots RoboMasters <em>Team Member (2022 – Present)</em></h3>
+            <h4>ThornBots RoboMasters <em>Team Member (2022 – Present)</em></h3>
             <ul>
                 <li>Mechanical team – designed, fabricated, and tested robot parts for RoboMasters competition</li>
                 <li>Software team – created UML diagrams, coded deliverables, prototyped color detection system using OpenCV</li>
                 <li>Worked together with team during competition to establish systems and processes to maintain robot</li>
             </ul>
-            <h3>Art Commissions Independent Business <em>Owner (2019 – 2021)</em></h3>
+            <h4>Art Commissions Independent Business <em>Owner (2019 – 2021)</em></h3>
             <ul>
                 <li>Communicated with clients to define a deliverable</li>
                 <li>Managed marketing, networking and finances</li>
             </ul>
 
             <h2>Projects</h2>
-            <h3>Multi-Tone Percussion Instrument <em>(Spring 2022)</em></h3>
+            <h4>Multi-Tone Percussion Instrument <em>(Spring 2022)</em></h3>
             <ul>
                 <li>Identified needs and specifications specific to a consumer to create a deliverable</li>
                 <li>Created milestones, deadlines, and checkpoints</li>
                 <li>Designed, fabricated, tested, and reiterated a percussion instrument made of trash utilizing mill and sander</li>
             </ul>
-            <h3>Joust-Inspired Game Creation Project in Java <em>(Winter 2022)</em></h3>
+            <h4>Joust-Inspired Game Creation Project in Java <em>(Winter 2022)</em></h3>
             <ul>
                 <li>Recreated the popular game Joust in Java with additional features</li>
                 <li>Laid down the framework for a physics engine and implemented a future-proof and modular object-oriented class system</li>
