--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Shane Nguyen's Portfolio</title>
         <link rel="stylesheet" href="styles/normalize.css" />
         <link rel="stylesheet" href="styles/main.css" />
-        <link rel="icon" href="images/temp.png" />
+        <link rel="icon" href="images/temp.ico" />
     </head>
     <body id="about">
         <header>
