--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
         <main>
             <h1>About</h1>
-            <img src="images/avatar.png" />
+            <img src="images/avatar.png" alt="Picture of me!" />
             <p>
                 I am a second-year at Rose-Hulman Institute of Technology, pursing a degree in Computer Science with a minor in Robotics. I love creating things — all the way from video games to art. I'm very passionate about art, animation, and video game development. I also love learning new things and problem-solving. 
             </p>
