--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
         <title>Shane Nguyen's Portfolio</title>
         <link rel="stylesheet" href="styles/normalize.css" />
         <link rel="stylesheet" href="styles/main.css" />
-        <link rel="icon" href="images/favicon.png" />
+        <link rel="icon" type="image/x-icon" href="images/temp.ico" />
     </head>
     <body id="portfolio">
         <header>
@@ -24,21 +24,21 @@
             <ul id="portfolioItems">
                 <li>
                     <h2><a>Trash Instrument</a></h2>
-                    <img src="images/trashinstrument.png">
+                    <img src="images/trashinstrument.png" alt="Near-final iteration of trash xylophone." />
                     <p>
                         EM103 final project tasked me to create a xylophone made of 100% trash/found material.
                     </p>
                 </li>
                 <li>
                     <h2><a>Joust Recreation</a></h2>
-                    <img src="images/joust.png">
+                    <img src="images/joust.png" alt="Screenshot of early prototype of game." />
                     <p>
                         CSSE220's final project of recreating the popular retro game Joust in Java. 
                     </p>
                 </li>
                 <li>
                     <h2><a>The Snakes Game</a></h2>
-                    <img src="images/snake.png">
+                    <img src="images/snake.png" alt="Screenshot of gameplay." />
                     <p>
                         CSSE120's game creation final project. We created a multiplayer Snake game.
                     </p>
