--- a/portfolio.html
+++ b/portfolio.html
@@ -24,21 +24,21 @@
             <ul id="portfolioItems">
                 <li>
                     <h2><a>Trash Instrument</a></h2>
-                    <img src="images/trashinstrument.png" alt="Near-final iteration of trash xylophone." />
+                    <img src="images/trashinstrument.PNG" alt="Near-final iteration of trash xylophone." />
                     <p>
                         EM103 final project tasked me to create a xylophone made of 100% trash/found material.
                     </p>
                 </li>
                 <li>
                     <h2><a>Joust Recreation</a></h2>
-                    <img src="images/joust.png" alt="Screenshot of early prototype of game." />
+                    <img src="images/joust.PNG" alt="Screenshot of early prototype of game." />
                     <p>
                         CSSE220's final project of recreating the popular retro game Joust in Java. 
                     </p>
                 </li>
                 <li>
                     <h2><a>The Snakes Game</a></h2>
-                    <img src="images/snake.png" alt="Screenshot of gameplay." />
+                    <img src="images/snake.PNG" alt="Screenshot of gameplay." />
                     <p>
                         CSSE120's game creation final project. We created a multiplayer Snake game.
                     </p>
